--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "electron-quick-start",
+  "name": "electron-clipboard",
+  "productName": "AlligatorClips",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "A minimal clipboard history application",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -18,5 +19,10 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^3.0.0"
+  },
+  "dependencies": {
+    "bulma": "^0.7.2",
+    "moment": "^2.22.2",
+    "vue": "^2.5.17"
   }
 }
